--- a/GW_DistanceNTime.ipynb
+++ b/GW_DistanceNTime.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNggNG21GjdzUEPA2rGfh+i",
+      "authorship_tag": "",
       "include_colab_link": true
     },
     "kernelspec": {
