--- a/GW_DistanceNTime.ipynb
+++ b/GW_DistanceNTime.ipynb
@@ -53,7 +53,7 @@
         "import googlemaps\n",
         "import pandas as pd\n",
         "\n",
-        "gmaps = googlemaps.Client(key='AIzaSyAiftzzHh7N1CMAJdLdmBipvG_SApkdQGw')"
+        "gmaps = googlemaps.Client(key='')"
       ],
       "metadata": {
         "colab": {
